# lighthouse

./: .gitignore  .gitmodules  .hgignore  .project  .pydevproject  LICENSE  README.md  TimeComparisonWithDefault.csv  bootstrap-linux.sh  bootstrap-new.sh  bootstrap.sh  index.html  params.json  restart-brix.sh  run-lighthouse-server-brix.sh  run-lighthouse-server-lighthouse2.sh  run-lighthouse-server.sh  run-linux.sh
Sa-Lin/: lapack_drivers.sql  le.csv  lls.csv  nonseig.csv  problem.csv  search.sql  seig.csv
Sa-Lin/Dlighthouse/: dropTables.py  settings.py  urls.py  views.py
Sa-Lin/Routines/: Linear_Equation_txt.csv  cgels_83.txt  cgelsd_91.txt  cgelsy_87.txt  cgges_213.txt  chbgvx_167.txt  cheevr_147.txt  chegv_153.txt  chegvx_165.txt  chpgv_157.txt  chpgvx_169.txt  chpsv_15.txt  cpbsv_23.txt  cposvx_59.txt  cspsvx_79.txt  dgbsv_6.txt  dgeesx_202.txt  dgelss_94.txt  dgesdd_224.txt  dgges_212.txt  dggevx_210.txt  dgglse_98.txt  dptsvx_70.txt  dsbgv_162.txt  dsbgvx_174.txt  dspgv_164.txt  dspgvx_176.txt  dspsvx_78.txt  dstevr_152.txt  routinePages.py~  sgeev_189.txt  sgels_81.txt  sgesvd_219.txt  sgges_211.txt  spbsv_21.txt  sposvx_57.txt  sspsvx_77.txt  ssygv_159.txt  ssygvd_183.txt  ssygvx_171.txt  (+14 more)
db/: README  lighthouse.sql  shark
gui/mysite/: run.bat  settings.py  urls.py
sandbox/: README.txt  copyView
sandbox/anamod/: Error.txt  README  makefile  petscmetadataut.c  petscmetadataut.h
sandbox/data/: PETSc66split_ncv.docx  PETScAnalysisNewDataAciss.docx  Trilinos66split_ncv.docx  Trilinos_anamod_35RS1.arff  Trilinos_anamod_35RS2.arff  petsc_all_good+bad.xlsx  petsc_anamod_35.csv  petsc_anamod_aciss_30.arff  trilinos_all_good+bad.xlsx
sandbox/matlab_code/: class_vector.mat  load_pca_data.m  pca_data_set.mat  pca_script.m  svm.m  svm_sequential.m  training_matrix.mat
sandbox/matrix_properties/: makefile  moose-features.csv  petsc2arff.py  properties.c  properties_moose6070.csv  uflorida-features+ex19.csv  uflorida-features.csv  uflorida-features1.csv
sandbox/ml/: BayesWorkflow.kf  README.txt  Workflow_All.kfml  anamod_feature_times.csv  petsc_anamod_aciss_1.arff  petsc_anamod_aciss_1.csv  petsc_anamod_aciss_10.arff  petsc_anamod_aciss_10.csv  petsc_anamod_aciss_12.arff  petsc_anamod_aciss_12.csv  petsc_anamod_aciss_15.arff  petsc_anamod_aciss_15.csv  petsc_anamod_aciss_20.arff  petsc_anamod_aciss_20.csv  petsc_anamod_aciss_25.arff  petsc_anamod_aciss_25.csv  petsc_anamod_aciss_30.arff  petsc_anamod_aciss_30.csv  petsc_anamod_aciss_35.arff  petsc_anamod_aciss_35.csv  petsc_anamod_aciss_40.arff  petsc_anamod_aciss_40.csv  petsc_anamod_aciss_45.arff  petsc_anamod_aciss_45.csv  petsc_anamod_aciss_5.arff  petsc_anamod_aciss_5.csv  petsc_anamod_aciss_8.arff  petsc_anamod_aciss_8.csv  petsc_anamod_arya_p16_30_25.arff  petsc_anamod_arya_p16_30_25.csv  scikit_learn_classifiers.py  scl.py  solvers_anamod_10.csv  solvers_anamod_25.arff  solvers_anamod_25.csv  solvers_anamod_5.arff  solvers_anamod_5.csv  solvers_anamod_5_copy.arff  solvers_moose_petsc_25.arff  solvers_moose_petsc_25.csv  (+14 more)
sandbox/other_code/: convenience.java
sandbox/petsc_code/: convert.c  filter.java  lin_sol_par_real.c  lin_sol_seq_real_batch.c  makefile  mat_conv_comp.c  mat_conv_real.c  mat_props_real.c  matrix.mtx  parallel.c  properties.c  script.sh  sequential.c  solver.c
sandbox/scripts/: WekaPredictionResults.csv  anamod2arff.py  anamod2csv.py  petsc2arff.py  petsc2arff_moose.py  solvers.py  top10goodSolvers.py  which_solvers.sh
sandbox/slepc_code/: build_all  build_all.sh  eigenvalue_parallel.c  eigenvalue_solver.c  experiments.sh  makefile  matrix_load.c
sandbox/thesis_source_files_javed/: appendixA.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  mythesis.tex  refs.bib  thesis.cls
sandbox/trilinos/: README.md  UF-matrix-all.ods  UF-valid-matrices.ods  contributors.txt
sandbox/trilinos/tpetra_testing/: CMakeLists.txt  aprepro_vhelp.h  do-configure  tpetra_testing.cpp
scripts/: run-lighthouse-server-lighthouse2.sh  run-local.sh
src/: search.py  svd.csv
src/Dlighthouse/: calledRoutines.csv  dropTables.py  settings-lhserver.py  settings.py  settings.py1  truncateTables.py  urls.py  views.py
src/Dlighthouse_Feb06_2012_beforeAjax/: dropTables.py  search_sites.py  settings.py  urls.py
src/LAPACK341/: compare.py  compare_factor.py  compare_inverse.py  compare_linearSolve.py  complex16_old.html  complex_old.html  database_old_new.xlsx  factor_find_341.py  factor_find_old.py  single_old.html  (+7 more)
stylesheets/: stylesheet.css
(+38059 files in other folders)
